# BBB-Image-Flasher

./: .gitignore  README.md  bbb_image_forge_cli.py  environment.yml  mainfest.yml  pyproject.toml  requirements.txt
.github/workflows/: build-certified-image.yml  ci.yml
app/: artifact_manager.py  build_service.py  builder.py  bundles.py  catalog.py  catalog_service.py  cli.py  controller.py  flasher.py  helper.py  helper_client.py  installer.py  main.py  manifests.py  models.py  personalizer.py  profiles.py  runtime.py  settings.py
app/data/: catalog.json
app/profiles/: beginner_starter.yml  cv_opencv.yml  embedded_systems.yml  full_robotics_stack.yml  huggingface_ai.yml  iot_sensors.yml  ml_ai.yml  python_lab.yml  robotics_ros.yml  robotics_starter.yml
app/templates/: flash.html  index.html
docs/: github-actions-cicd.md
examples/: cv_opencv.yml  python_lab.yml
packaging/: README.md  environment.yml
scripts/: bootstrap_github_actions.sh  ci_build_certified_image.py  ensure_conda_env.sh  run_dev.sh  run_windows.bat  run_windows.ps1
tests/: test_build_service.py  test_bundles.py  test_catalog_service.py  test_flasher.py  test_main_privileges.py  test_main_runtime.py  test_personalization_request.py  test_runtime.py
